# Advanced-Programming

./: BlockCommand.cpp  BlockCommand.h  CMakeLists.txt  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  README.md  SimulatorVar.cpp  SimulatorVar.h  StringOperations.cpp  StringOperations.h  a.out  details.txt  fly.txt  main.cpp
BlockCommands/: ConditionBlock.h  FunctionCommand.cpp
BlockCommands/ConditionCommands/: IfCommand.h
Commands/: BlockCommand.cpp  BlockCommand.h  Command.h  ConnectControlClientCommand.cpp  ConnectControlClientCommand.h  OpenDataServerCommand.cpp  OpenDataServerCommand.h  PrintCommand.cpp  PrintCommand.h  SleepCommand.cpp  SleepCommand.h  VarCommand.cpp  VarCommand.h
Commands/BlockCommands/: ConditionBlock.cpp  ConditionBlock.h  FunctionCommand.cpp  FunctionCommand.h  IfCommand.cpp  IfCommand.h  WhileCommand.cpp  WhileCommand.h
Commands/VarCommands/: ArrowVarCommand.cpp  ArrowVarCommand.h  ChangeValueCommand.cpp  ChangeValueCommand.h  EqualSignVarCommand.cpp  EqualSignVarCommand.h  LeftArrowVarCommand.cpp  LeftArrowVarCommand.h  RightArrowVarCommand.cpp  (+1 more)
Containers/: Container.h  ContainerCreator.cpp  ContainerCreator.h  MapsContainer.cpp  MapsContainer.h  SocketsContainer.cpp  SocketsContainer.h
Expressions/: Expression.h  ExpressionsIncludes.h  Value.cpp  Value.h  Variable.cpp  Variable.h
InterpreterFiles/: CalculationTokensCreatorChecker.cpp  CalculationTokensCreatorChecker.h  Interpreter.cpp  Interpreter.h  InterpreterIncludes.h  TokensToExpressionConverter.cpp  TokensToExpressionConverter.h  VarsSetter.cpp  VarsSetter.h
(+23 files in other folders)
